# flt

./: .gitmodules  Cargo.toml  README.md  build.rs  engine.version  install_custom_device.sh  launch_flt.sh  run.sh
.github/workflows/: rust.yml
example/: .metadata  pubspec.yaml
example/lib/: main.dart
flt/: Cargo.toml  README.md  build.rs
flt-cli/: Cargo.toml  README.md
flt-cli/host_app/: README.md  pubspec.yaml
flt-cli/src/: main.rs
flt/src/: constants.rs  embedder.rs  error.rs  event.rs  feature.rs  lib.rs  main.rs  semantics.rs  task_runner.rs  terminal_event.rs  terminal_event_task.rs  terminal_window.rs
flutter-sys/: Cargo.toml  README.md  build.rs
flutter-sys/src/: callbacks.rs  embedder_callbacks.rs  engine.rs  error.rs  event.rs  ffi.rs  flutter_engine.rs  key.rs  lib.rs  pixel.rs  pointer.rs  project_args.rs  semantics.rs  sys.rs  task.rs  task_runner.rs  tasks.rs  text_input.rs  user_data.rs
sample_app/: README.md  pubspec.yaml
sample_app/android/app/: build.gradle
sample_app/android/app/src/main/: AndroidManifest.xml
sample_app/ios/Runner/: Info.plist
sample_app/ios/Runner.xcodeproj/: project.pbxproj
sample_app/lib/: main.dart
sample_app/linux/: CMakeLists.txt  my_application.cc
sample_app/macos/Runner.xcodeproj/: project.pbxproj
sample_app/macos/Runner/Configs/: AppInfo.xcconfig
sample_app/web/: index.html  manifest.json
sample_app/windows/: CMakeLists.txt
sample_app/windows/runner/: Runner.rc  main.cpp
src/: engine.rs  lib.rs  main.rs  terminal.rs  terminal_window.rs
(+2 files in other folders)
