[package]
name = "flt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.2.1", features = ["derive"] }
crossterm = "0.27.0"
flutter-sys = { path = "../flutter-sys" }
libc = "0.2.178"
memmap2 = "0.9.9"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.26.0"
