[package]
name = "flutter-sys"
version = "0.1.0"
edition = "2021"
links = "flutter_engine"

[lib]
# TODO(jiahaog): Generated bindings fail these tests.
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[build-dependencies]
bindgen = "0.64.0"
